--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,14 @@
     "require": {
         "php": "^7.2.5|^8.0",
         "fideloper/proxy": "^4.4",
+        "filp/whoops": "^2.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^6.3.1|^7.0.1",
+        "jenssegers/mongodb": "3.7",
         "laravel/framework": "^7.29",
-        "laravel/tinker": "^2.5"
+        "laravel/tinker": "^2.5",
+        "mongodb/mongodb": "^1.8",
+        "rackspace/php-opencloud": "dev-master"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
