--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "jenssegers/mongodb": "3.7",
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
-        "mongodb/mongodb": "^1.8",
+        "laravel/ui": "^2.5",
+        "mongodb/mongodb": "^1.6",
         "rackspace/php-opencloud": "dev-master"
     },
     "require-dev": {
