--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.2.5|^8.0",
+        "barryvdh/laravel-cors": "^2.0",
         "fideloper/proxy": "^4.4",
         "filp/whoops": "^2.4",
         "fruitcake/laravel-cors": "^2.0",
@@ -17,6 +18,7 @@
         "laravel/framework": "^7.29",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^2.5",
+        "midtrans/midtrans-php": "^2.3",
         "mongodb/mongodb": "^1.6",
         "rackspace/php-opencloud": "dev-master"
     },
